update Dockerfile Jenkinsfile